--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "yet-another-react-lightbox": "^3.23.2"
   },
   "devDependencies": {
